Timezone in config and exclude the Sublime files.

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ destination:  ./_site
 plugins:      ./_plugins
 future:       false
 permalink:    none
+timezone: America/New_York
+exclude:      [GMNE.sublime-project, GMNE.sublime-workspace]
