--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 name:         Golden Meanie
-pygments:     true
+highlighter:  none
 
-source:       .
-destination:  ./_site
-plugins:      ./_plugins
-future:       false
-permalink:    none
-timezone: America/New_York
-exclude:      [GMNE.sublime-project, GMNE.sublime-workspace]
+permalink:    title
+
+sass:
+  sass_dir:   _sass
+  style:      compressed
