Fix the permalink format

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name:         Golden Meanie
 highlighter:  none
 
-permalink:    title
+permalink:    none # just /[title].html
 
 sass:
   sass_dir:   _sass
